--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
 	<link rel="stylesheet" href="./assets/css/reset.css" />
-	<link rel="stylesheet" href="./assets/css/style.css?v=6.0" />
+	<link rel="stylesheet" href="./assets/css/style.css?v=7.0" />
 	<script src="./assets/js/libs/prefixfree.min.js"></script>
 	<script src="./assets/js/libs/modernizr-3.2.0.base.js"></script>
 	<script src="./assets/js/libs/jquery-3.3.1.min.js"></script>
@@ -56,6 +56,7 @@
 					<div>
 						<label>Сколько мы вам должны?</label>
 						<input type="text" class="input-dollar" disabled="true" id="form-input-dollar" placeholder="455"/>
+            <input type="text" class="input-rubl" disabled="true" id="form-input-rubl" placeholder="10000" />
 					</div>
 					<div data-mode="eth">
 						<label>Сумма в ETH</label>
@@ -316,7 +317,7 @@
 				<footer></footer>
 			</article>
 			<p class="confirm-answer">Вы уверены что для получения токенов не указали адрес обменника (бота или биржи) и сможете снять токены?</p>
-			<script type="text/javascript" src="./assets/js/main.js?v=6.7"></script>
+			<script type="text/javascript" src="./assets/js/main.js?v=7.0"></script>
 		</section>
 	</div>
 </body>
